--- a/app/src/main/res/layout/memberlistview.xml
+++ b/app/src/main/res/layout/memberlistview.xml
@@ -19,6 +19,7 @@
             android:layout_height="match_parent"
             android:layout_weight="0.3"
             android:id="@+id/iim_logo"
+            android:padding="10dp"
             android:src="@mipmap/ic_launcher_round"/>
 
 
@@ -26,13 +27,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.7"
+            android:padding="10dp"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/iim_title"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 android:textColor="#000fff"
                 android:textStyle="bold"/>
 
@@ -40,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/director_name"
-                android:textSize="15sp"
+                android:textSize="12sp"
                 android:textColor="#000888"
                 android:textStyle="bold"/>
 
