--- a/app/src/main/res/layout/memberdetailview.xml
+++ b/app/src/main/res/layout/memberdetailview.xml
@@ -46,6 +46,9 @@
                         android:id="@+id/iim_home_name"
                         />
 
+
+
+
             </LinearLayout>
 
             <LinearLayout
@@ -125,6 +128,46 @@
         </LinearLayout>
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal" android:padding="10dp">
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.25"
+                android:id="@+id/iim_website_url"
+                android:src="@drawable/ic_explore_black_24dp"/>
+
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.25"
+                android:id="@+id/library_website_url"
+                android:src="@drawable/ic_http_black_24dp"/>
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.25"
+                android:id="@+id/library_opac_url"
+                android:src="@drawable/ic_explore_black_24dp"/>
+
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.25"
+                android:id="@+id/library_ir_url"
+                android:src="@drawable/ic_http_black_24dp"/>
+
+
+        </LinearLayout>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -151,7 +194,7 @@
                 android:scrollbars="vertical"
                 />
 
-          
+
 
 
         </LinearLayout>
